--- a/views/head.pug
+++ b/views/head.pug
@@ -11,7 +11,7 @@ html(lang='en')
 
         link(rel='stylesheet', href="./css/global.css")
         script(src='./js/jquery-3.1.1.min.js')
-        script(src='./js/global.js')
+        script(src='./js/tweet-click.js')
 
     body
         block content
